--- a/.github/workflows/docker_build_workflow.yml
+++ b/.github/workflows/docker_build_workflow.yml
@@ -30,4 +30,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/udagram-reverseproxy
+          tags: ${{ secrets.DOCKER_USERNAME }}/reverseproxy
